pewarnaan hover services

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
-    --primary: #6222CC;
-    --secondary: #FBA504;
+    --primary: #F17F2B;
+    --secondary: #f6deb3;
     --light: #F6F4F9;
     --dark: #04000B;
 }
